MONDRIAN: Rearchitect XMLA support; add CatalogLocator (check in on behalf of Gang Chen).
[git-p4: depot-paths = "//open/mondrian/": change = 4806]